style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins:wght@600&family=Ubuntu+Mono:ital@1&display=swap');

:root {
  --primary: #00D1FF;
  --light: #EEEEEE;
  --dark: #212121;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container {

  font-family: Poppins;
  max-width: 1280px;
  margin: 0 auto;

  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav {
  position: flex;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;
  background-color: var(--dark);
  padding: 16px 32px;
  border-bottom: 3px solid var(--primary);
}

h1 {
  color: #FFF;
  font-size: 28px;
  font-weight: 900;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.hamburger {
  display: block;
  position: relative;
  z-index: 1;

  user-select: none;

  appearance: none;
  border: none;
  outline: none;
  background: none;

  cursor: pointer;
}

.hamburger span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;

  background-color: var(--light);
  border-radius: 6px;
  z-index: 1;

  transform-origin: 0 0;

  transition: 0.4s;
}

.hamburger:hover span:nth-child(2) {
  transform: translateX(10px);
  background-color: var(--primary);
}

.hamburger.is-active span:nth-child(1) {
  transform: translate(0px, -2px) rotate(45deg);
}

.hamburger.is-active span:nth-child(2) {
  opacity: 0;
  transform: translateX(15px);
}

.hamburger.is-active span:nth-child(3) {
  transform: translate(-3px, 3px) rotate(-45deg);
}

.hamburger.is-active:hover span {
  background-color: var(--primary);
}

.menu {
  display: none;
  flex: 1 1 0%;
  justify-content: flex-end;
  margin: 0 -16px;
}

.menu a {
  color: #FFFFFF;
  margin: 0 16px;
  font-weight: 600;
  text-decoration: none;
  transition: 0.4s;
  padding: 8px 16px;
  border-radius: 99px;
}

.menu a.is-active, .menu a:hover {
  background-color: var(--primary);
  color: #000000;
}
@media (min-width: 768px) {
  .hamburger {
    display: none;
  }
  .menu {
    display: flex;
  }
}

.bruh {
  font-family: 'IBM Plex Mono', monospace;
  font-size: 18px;
}

#hero{
  width: 100%;
  height: 100vh;
  background: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.gjZa2Rhj15eYOr7hCeHq9gHaJ4%26pid%3DApi&f=1) no-repeat center / cover;
  color: white;
}

.container2 {
  width: 90%;
  height: 100%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.container2 .info h1{
  font-size: 3rem;
  margin-bottom: 1rem;
}

.container2 .info h2{
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

.container2 .info p{
  font-size: 1.2rem;
  max-width: 70%;
}

.container2 .info a{
  text-decoration: none;
  display: inline-block;
  background: white;
  border-radius: 4px;
  font-size: 1.8rem;
  padding: .5em 2em;
  margin-top: 2rem;
  color: var(--primary);
}

@media only screen and (max-width: 768px){
  html{
    font-size: 10px;
  }
}

#about{
  width: 100%;
  height: 100vh;
  color: black;
}

.container3 {
  width: 90%;
  height: 100%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.container3 .info h1{
  font-size: 3rem;
  margin-bottom: 1rem;
  color: black;
  justify-items: center;
}

.container3 .info p{
  font-size: 1.2rem;
  max-width: 70%;
  margin: 0 auto;
}

.moment {
  color: white;
  width: 60%;
  height: 60vh;
  background: black;
  margin: 0 auto;
  border-radius: 20px;
  margin-bottom: 1rem;
}


#team{
  width: 100%;
  min-height: 100vh;
  background: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.gjZa2Rhj15eYOr7hCeHq9gHaJ4%26pid%3DApi&f=1) no-repeat center / cover;
  color: white;
}

.container4 {
  width: 90%;
  height: 100%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.container4 .info h1{
  font-size: 3rem;
  margin-bottom: 1rem;
  margin-top: 6rem;
  color: white;
  justify-items: center;
}

.container4 .info h2{
  margin-top: 1rem;
  font-size: 1.7rem;
  color: black;
  justify-items: center;
}

.container4 .info p{
  font-size: 1.2rem;
  max-width: 70%;
  margin: 0 auto;
  margin-bottom: 1rem;
}

.cont {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-bottom: 5rem;
}

.card {
  background: white;
  width: 250px;
  color: black;
  margin: 10px;
  border-radius: 15px;
}

.card-image {
  height: 250px;
  margin-bottom: 15px;
  background-size: cover;
  border-radius: 15px 15px 0 0;
}

.car-1{
  background-image: url('https://ca.slack-edge.com/TCKE4QSG5-U02DSDHG6NM-e897b25cb499-512')
}

.car-2{
  background-image: url('https://ca.slack-edge.com/TCKE4QSG5-U02DDP4CLUA-7c8338996212-512')
}

.car-3{
  background-image: url('https://ca.slack-edge.com/TCKE4QSG5-U02DKK28DEG-c16245c94198-512')
}

.car-4{
  background-image: url('https://ca.slack-edge.com/TCKE4QSG5-U02E3PC4W6L-2e50775985a7-512')
}

.car-5{
  background-image: url('https://ca.slack-edge.com/TCKE4QSG5-U02DB0W4CMT-cef8bef9b9fe-512')
}

